final mobile updates version 1.3

--- a/index.html
+++ b/index.html
@@ -1121,6 +1121,14 @@
                         </div>
                     </div>
                     
+                    <style>
+                        @media (max-width: 768px) {
+                            .about-images-row {
+                                grid-template-columns: 1fr !important;
+                            }
+                        }
+                    </style>
+                    
                     <p style="margin-bottom: 20px; color: var(--gray); font-size: 1rem; line-height: 1.6;">
                         Imagine surveillance systems so advanced, they predict threats before they happen. Picture internet speeds so blazing fast, you feel like you're surfing the cosmic web. That's the reality we deliver — not just services, but revolutionary experiences that redefine what's possible in security and connectivity.
                     </p>
