--- a/index.html
+++ b/index.html
@@ -1514,6 +1514,7 @@
                 margin-bottom: 24px;
             }
         }
+        .login-form input {
             box-sizing: border-box;
             transition: border-color 0.3s;
         }
