Update admin credentials: username=topssystems, password=tops12@34

--- a/index.html
+++ b/index.html
@@ -1837,8 +1837,8 @@
 
     <script>
         // Hardcoded login credentials
-        const ADMIN_USERNAME = "admin";
-        const ADMIN_PASSWORD = "admin";
+        const ADMIN_USERNAME = "topssystems";
+        const ADMIN_PASSWORD = "tops12@34";
 
         // Assign stable IDs to all editable elements on page load
         function assignStableElementIds() {
