--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
     <div class="nav-bar desktop-nav-bar" style="justify-content: center;">
         <!-- Navigation -->
         <nav class="nav-links">
-            <a href="#">Home</a>
+            <a href="#home">Home</a>
             <a href="#services">Services</a>
-            <a href="#">Solutions</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="#">Projects</a>
+            <a href="services.html">Solutions</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="#projects">Projects</a>
         </nav>
     </div>
 
@@ -187,9 +187,9 @@
         <!-- Navigation - Simplified for mobile -->
         <nav class="nav-links" style="flex-wrap: wrap; gap: 10px;">
             <a href="#services" style="padding: 6px 10px; font-size: 0.9rem;">Services</a>
-            <a href="#" style="padding: 6px 10px; font-size: 0.9rem;">About</a>
-            <a href="#" style="padding: 6px 10px; font-size: 0.9rem;">Contact</a>
-            <a href="#" style="padding: 6px 10px; font-size: 0.9rem;">Projects</a>
+            <a href="about.html" style="padding: 6px 10px; font-size: 0.9rem;">About</a>
+            <a href="contact.html" style="padding: 6px 10px; font-size: 0.9rem;">Contact</a>
+            <a href="#projects" style="padding: 6px 10px; font-size: 0.9rem;">Projects</a>
         </nav>
     </div>
 
@@ -1298,8 +1298,8 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="starlink.html">Starlink Services</a></li>
                     </ul>
                 </div>
@@ -1318,11 +1318,11 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#">Camera Installation</a></li>
-                        <li><a href="#">Starlink Setup</a></li>
-                        <li><a href="#">Security Systems</a></li>
-                        <li><a href="#">Network Integration</a></li>
-                        <li><a href="#">Maintenance</a></li>
+                        <li><a href="services.html">Camera Installation</a></li>
+                        <li><a href="services.html">Starlink Setup</a></li>
+                        <li><a href="services.html">Security Systems</a></li>
+                        <li><a href="services.html">Network Integration</a></li>
+                        <li><a href="services.html">Maintenance</a></li>
                     </ul>
                 </div>
             </div>
@@ -1354,8 +1354,8 @@
                             <li><a href="#home" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-home" style="margin-right: 8px;"></i>Home</a></li>
                             <li><a href="#services" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-cogs" style="margin-right: 8px;"></i>Services</a></li>
                             <li><a href="#projects" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-project-diagram" style="margin-right: 8px;"></i>Projects</a></li>
-                            <li><a href="#about" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-info-circle" style="margin-right: 8px;"></i>About Us</a></li>
-                            <li><a href="#contact" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-envelope" style="margin-right: 8px;"></i>Contact</a></li>
+                            <li><a href="about.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-info-circle" style="margin-right: 8px;"></i>About Us</a></li>
+                            <li><a href="contact.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-envelope" style="margin-right: 8px;"></i>Contact</a></li>
                             <li><a href="starlink.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-satellite" style="margin-right: 8px;"></i>Starlink</a></li>
                         </ul>
                     </div>
@@ -1374,11 +1374,11 @@
                     <div class="footer-section" style="padding: 20px; background: rgba(255,255,255,0.05); border-radius: 15px; backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1);">
                         <h3 style="font-size: 1.4rem; margin-bottom: 20px; color: #007bff;"><i class="fas fa-tools"></i> Services</h3>
                         <ul style="list-style: none; padding: 0; display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                            <li><a href="#" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-video" style="margin-right: 8px;"></i>Camera Installation</a></li>
-                            <li><a href="#" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-satellite" style="margin-right: 8px;"></i>Starlink Setup</a></li>
-                            <li><a href="#" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-shield-alt" style="margin-right: 8px;"></i>Security Systems</a></li>
-                            <li><a href="#" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-network-wired" style="margin-right: 8px;"></i>Network Integration</a></li>
-                            <li style="grid-column: span 2;"><a href="#" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0; text-align: center;"><i class="fas fa-wrench" style="margin-right: 8px;"></i>Maintenance</a></li>
+                            <li><a href="services.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-video" style="margin-right: 8px;"></i>Camera Installation</a></li>
+                            <li><a href="services.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-satellite" style="margin-right: 8px;"></i>Starlink Setup</a></li>
+                            <li><a href="services.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-shield-alt" style="margin-right: 8px;"></i>Security Systems</a></li>
+                            <li><a href="services.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0;"><i class="fas fa-network-wired" style="margin-right: 8px;"></i>Network Integration</a></li>
+                            <li style="grid-column: span 2;"><a href="services.html" style="color: #e0e0e0; text-decoration: none; transition: color 0.3s ease; padding: 5px 0; text-align: center;"><i class="fas fa-wrench" style="margin-right: 8px;"></i>Maintenance</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1837,8 +1837,8 @@
 
     <script>
         // Hardcoded login credentials
-        const ADMIN_USERNAME = "topssystems";
-        const ADMIN_PASSWORD = "tops12@34";
+        const ADMIN_USERNAME = "admin";
+        const ADMIN_PASSWORD = "admin";
 
         // Assign stable IDs to all editable elements on page load
         function assignStableElementIds() {
