--- a/starlink.html
+++ b/starlink.html
@@ -109,7 +109,7 @@
         </a>
     </div>
     
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="container">
             <div class="logo">
                 <h1><i class="fas fa-satellite"></i> TOPS SYSTEM - Starlink</h1>
@@ -128,13 +128,13 @@
             <p style="font-size: 1.3rem; margin-bottom: 40px;">High-speed satellite internet for remote locations and businesses</p>
             <a href="/#contact" class="btn btn-primary" style="font-size: 1.1rem; padding: 15px 40px;">Get Starlink Installed</a>
         </div>
-    </section>
+    </section> -->
 
     <section class="services" style="padding: 80px 0;">
         <div class="container">
             <div class="section-title">
-                <h2>Starlink Installation Services</h2>
-                <p>Complete Starlink setup and configuration by certified technicians</p>
+                <h2 style="font-style: normal !important;">Starlink Installation Services</h2>
+                <p style="font-style: normal !important;">Complete Starlink setup and configuration by certified technicians</p>
             </div>
 
             <div class="starlink-features">
@@ -165,7 +165,7 @@
         </div>
     </section>
 
-    <section class="contact" style="padding: 80px 0; background: black url('/static/images/imageTopBar.jpg') no-repeat center center / cover; color: black;">
+    <!-- <section class="contact" style="padding: 80px 0; background: black url('/static/images/imageTopBar.jpg') no-repeat center center / cover; color: black;">
         <div class="container">
             <div class="section-title">
                 <h2>Ready to Go Online?</h2>
@@ -188,7 +188,7 @@
                 <button type="submit" class="btn btn-primary" style="width: 100%;">Request Free Quote</button>
             </form>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="container">
