--- a/index.html
+++ b/index.html
@@ -1148,8 +1148,8 @@
             <div class="carousel-container" style="margin-top: 40px; border-radius: 15px; overflow: hidden; box-shadow: 0 15px 50px rgba(0,0,0,0.2);">
                 <div class="carousel-wrapper" style="position: relative; width: 100%; height: 500px; background: #000;">
                     <div class="carousel-track" style="display: flex; height: 100%;">
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy.jpg" alt="Advanced Security Technology" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy.jpg" alt="Advanced Security Technology" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 2.5rem; margin: 0 0 15px 0; font-weight: 900;">Advanced Security</h3>
@@ -1157,8 +1157,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy1.jpg" alt="Satellite Connectivity Solutions" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy1.jpg" alt="Satellite Connectivity Solutions" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 2.5rem; margin: 0 0 15px 0; font-weight: 900;">Starlink Connectivity</h3>
@@ -1166,8 +1166,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy2.jpg" alt="Professional Installation Team" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy2.jpg" alt="Professional Installation Team" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 2.5rem; margin: 0 0 15px 0; font-weight: 900;">Expert Team</h3>
@@ -1175,8 +1175,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy3.jpg" alt="Network Integration Expertise" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy3.jpg" alt="Network Integration Expertise" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 2.5rem; margin: 0 0 15px 0; font-weight: 900;">Seamless Integration</h3>
@@ -1184,8 +1184,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy4.jpg" alt="Security Solutions" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy4.jpg" alt="Security Solutions" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 2.5rem; margin: 0 0 15px 0; font-weight: 900;">Complete Solutions</h3>
@@ -1193,8 +1193,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy5.jpg" alt="Project Showcase" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy5.jpg" alt="Project Showcase" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 2.5rem; margin: 0 0 15px 0; font-weight: 900;">Proven Results</h3>
