Move mobile feature cards into mobile footer (replace contact info block); remove duplicate mobile key features

--- a/index.html
+++ b/index.html
@@ -1313,24 +1313,7 @@
                 </div>
             </div>
 
-            <!-- Key Features Mobile -->
-            <div style="display: grid; grid-template-columns: 1fr; gap: 20px;">
-                <div style="text-align: center; padding: 20px; background: linear-gradient(135deg, rgba(26, 26, 46, 0.9), rgba(22, 33, 62, 0.85)); border-radius: 12px; border: 2px solid #00d4ff; transition: all 0.3s ease;">
-                    <i class="fas fa-rocket" style="font-size: 2rem; background: linear-gradient(135deg, #00d4ff, #0066ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 12px; display: block;"></i>
-                    <h4 style="color: #00d4ff; margin-bottom: 8px; font-size: 1rem; font-weight: 900;">Certified Experts</h4>
-                    <p style="color: #b2bec3; font-size: 0.9rem; line-height: 1.5; margin: 0;">Professional technicians with proven expertise in security installations</p>
-                </div>
-                <div style="text-align: center; padding: 20px; background: linear-gradient(135deg, rgba(26, 26, 46, 0.9), rgba(15, 52, 96, 0.85)); border-radius: 12px; border: 2px solid #0066ff; transition: all 0.3s ease;">
-                    <i class="fas fa-satellite" style="font-size: 2rem; background: linear-gradient(135deg, #0066ff, #00d4ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 12px; display: block;"></i>
-                    <h4 style="color: #0066ff; margin-bottom: 8px; font-size: 1rem; font-weight: 900;">Advanced Technology</h4>
-                    <p style="color: #b2bec3; font-size: 0.9rem; line-height: 1.5; margin: 0;">Latest AI-powered cameras and satellite systems for optimal performance</p>
-                </div>
-                <div style="text-align: center; padding: 20px; background: linear-gradient(135deg, rgba(26, 26, 46, 0.9), rgba(22, 62, 62, 0.85)); border-radius: 12px; border: 2px solid #00ff88; transition: all 0.3s ease;">
-                    <i class="fas fa-headset" style="font-size: 2rem; background: linear-gradient(135deg, #00ff88, #00d4ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 12px; display: block;"></i>
-                    <h4 style="color: #00ff88; margin-bottom: 8px; font-size: 1rem; font-weight: 900;">24/7 Support</h4>
-                    <p style="color: #b2bec3; font-size: 0.9rem; line-height: 1.5; margin: 0;">Round-the-clock monitoring and technical support for your peace of mind</p>
-                </div>
-            </div>
+            <!-- Key Features Mobile removed (moved to footer mobile) -->
         </div>
     </section>
 
@@ -1572,15 +1555,22 @@
                         </ul>
                     </div>
                     
-                    <div class="footer-section" style="padding: 20px; background: rgba(255,255,255,0.05); border-radius: 15px; backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1);">
-                        <h3 style="font-size: 1.4rem; margin-bottom: 20px; color: #007bff;"><i class="fas fa-address-book"></i> Contact Info</h3>
-                        <ul style="list-style: none; padding: 0;">
-                            <li style="margin-bottom: 12px; color: #e0e0e0;"><i class="fas fa-map-marker-alt" style="color: #ff6b6b; margin-right: 10px;"></i> Flo Petroleum, WRMC+XMJ, Masvingo</li>
-                            <li style="margin-bottom: 12px; color: #e0e0e0;"><i class="fas fa-user" style="color: #4ecdc4; margin-right: 10px;"></i> Emmanuel Ratisai</li>
-                            <li style="margin-bottom: 12px; color: #e0e0e0;"><i class="fas fa-phone" style="color: #45b7d1; margin-right: 10px;"></i> 0772675634 / 0712071615</li>
-                            <li style="margin-bottom: 12px; color: #e0e0e0;"><i class="fas fa-envelope" style="color: #f9ca24; margin-right: 10px;"></i> topssystems1@gmail.com</li>
-                            <li style="color: #e0e0e0;"><i class="fas fa-clock" style="color: #6c5ce7; margin-right: 10px;"></i> Mon-Fri: 8am-6pm</li>
-                        </ul>
+                    <div class="footer-section" style="padding: 12px; background: rgba(255,255,255,0.03); border-radius: 12px; backdrop-filter: blur(8px); border: 1px solid rgba(255,255,255,0.06);">
+                        <h3 style="font-size: 1.4rem; margin-bottom: 12px; color: #00d4ff;"><i class="fas fa-star"></i> Highlights</h3>
+                        <div style="display: grid; gap: 12px;">
+                            <div style="text-align: left; padding: 12px; background: linear-gradient(135deg, rgba(26,26,46,0.92), rgba(22,33,62,0.86)); border-radius: 10px; border: 1px solid #00d4ff;">
+                                <h4 style="color: #00d4ff; margin: 0 0 6px 0; font-size: 1rem; font-weight: 800;">Certified Experts</h4>
+                                <p style="color: #cfd6da; margin: 0; font-size: 0.95rem;">Professional technicians with proven expertise in security installations</p>
+                            </div>
+                            <div style="text-align: left; padding: 12px; background: linear-gradient(135deg, rgba(26,26,46,0.92), rgba(15,52,96,0.86)); border-radius: 10px; border: 1px solid #0066ff;">
+                                <h4 style="color: #0066ff; margin: 0 0 6px 0; font-size: 1rem; font-weight: 800;">Advanced Technology</h4>
+                                <p style="color: #cfd6da; margin: 0; font-size: 0.95rem;">Latest AI-powered cameras and satellite systems for optimal performance</p>
+                            </div>
+                            <div style="text-align: left; padding: 12px; background: linear-gradient(135deg, rgba(26,26,46,0.92), rgba(22,62,62,0.86)); border-radius: 10px; border: 1px solid #00ff88;">
+                                <h4 style="color: #00ff88; margin: 0 0 6px 0; font-size: 1rem; font-weight: 800;">24/7 Support</h4>
+                                <p style="color: #cfd6da; margin: 0; font-size: 0.95rem;">Round-the-clock monitoring and technical support for your peace of mind</p>
+                            </div>
+                        </div>
                     </div>
                     
                     <div class="footer-section" style="padding: 20px; background: rgba(255,255,255,0.05); border-radius: 15px; backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1);">
