--- a/index.html
+++ b/index.html
@@ -1247,8 +1247,8 @@
             <div class="carousel-container" style="margin-top: 30px; border-radius: 15px; overflow: hidden; box-shadow: 0 15px 50px rgba(0,0,0,0.2); margin-bottom: 40px;">
                 <div class="carousel-wrapper" style="position: relative; width: 100%; height: 350px; background: #000;">
                     <div class="carousel-track" style="display: flex; height: 100%;">
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy.webp" alt="Advanced Security Technology" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy.webp" alt="Advanced Security Technology" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center; padding: 20px;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 1.8rem; margin: 0 0 10px 0; font-weight: 900;">Advanced Security</h3>
@@ -1256,8 +1256,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy1.webp" alt="Satellite Connectivity Solutions" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy1.webp" alt="Satellite Connectivity Solutions" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center; padding: 20px;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 1.8rem; margin: 0 0 10px 0; font-weight: 900;">Starlink Connectivity</h3>
@@ -1265,8 +1265,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy2.webp" alt="Professional Installation Team" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy2.webp" alt="Professional Installation Team" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center; padding: 20px;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 1.8rem; margin: 0 0 10px 0; font-weight: 900;">Expert Team</h3>
@@ -1274,8 +1274,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy3.webp" alt="Network Integration Expertise" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy3.webp" alt="Network Integration Expertise" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center; padding: 20px;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 1.8rem; margin: 0 0 10px 0; font-weight: 900;">Seamless Integration</h3>
@@ -1283,8 +1283,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy4.jpg" alt="Security Solutions" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy4.jpg" alt="Security Solutions" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center; padding: 20px;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 1.8rem; margin: 0 0 10px 0; font-weight: 900;">Complete Solutions</h3>
@@ -1292,8 +1292,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 100%; flex-shrink: 0; position: relative;">
-                            <img loading="lazy" src="/static/images/happy5.jpg" alt="Project Showcase" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div style="flex: 0 0 100%; width: 100%; height: 100%; position: relative;">
+                            <img loading="lazy" src="/static/images/happy5.jpg" alt="Project Showcase" style="display: block; width: 100%; height: 100%; object-fit: cover;">
                             <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3)); display: flex; align-items: center; justify-content: center; padding: 20px;">
                                 <div style="text-align: center; color: white;">
                                     <h3 style="font-size: 1.8rem; margin: 0 0 10px 0; font-weight: 900;">Proven Results</h3>
